<package format="2">
  <name>whats_this</name>
  <version>0.2.0</version>
  <description>Sample RAPP application using cloud object recognition capabilities</description>
  <maintainer email="maciek.slon@gmail.com">Maciej Stefańczyk</maintainer>
  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>rapp-robots-api</build_depend>
</package>
