<package format="2">
  <name>who_is</name>
  <version>0.2.0</version>
  <description>Sample RAPP application using cloud face detection and recognition services</description>
  <maintainer email="maciek.slon@gmail.com">Maciej Stefańczyk</maintainer>
  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>rapp-robots-api</build_depend>
</package>
